<resources>
    <string name="app_name">Victor Sports Odds</string>
    <string name="title1_con">Every online operator wants to beat their competitors, and Victor Sports Odds achieves so by providing some of the best football odds.
        BetVictor is able to squeeze an extra point or two out of some of its top football bets by taking lower margins, which seasoned punters will not only notice, but enjoy.
        On the other hand, newcomers and casual fans can cash out on accumulators early, but our favorite parts of the site are the bet calculator and results service.</string>
    <string name="title2_con">Taking advantage of Victor Sports Odds best odds guaranteed is one of the finest methods to stretch the odds.
        Place your wager early in the day, after 9 a.m., and if the price rises, you can profit or remain with your early price.
    BetVictor has gone above and beyond for their customers by introducing a "Lengthen The Odds" offering for all of their horse racing markets.
        This is a great method to wager, and you may obtain ridiculous odds on your favorite runner winning by a large margin.</string>
    <string name="title3_con">Victor Sports Odds has previously won honors for their pricing system. Their current structure is on par with, if not better than,
        the majority of the competition. We were most impressed by their consistency, and they were able to offer fantastic discounts on so many different sports and marketplaces.
    What exactly is BetVictors Best Odds Guaranteed? Victor offers Best Odds Guaranteed,
        which implies that you will be awarded a greater price on horse racing if you select an early price but the beginning price is higher.</string>
    <string name="title4_con">Victor Sports Odds offers a dizzying array of sports. Football dominates the web, and few can compete in terms of market and even game coverage. Aside from that, horse racing is another activity that is brilliantly covered, as are tennis, cricket, golf, rugby, and a variety of US-based sports. But it is not only the variety of sports. The number of markets available on events rivals that of any other bookmaker. When you include the #PriceItUp tool, that number skyrockets. We will talk about it further afterwards.</string>
    <string name="title5_con">After waxing poetic about the design, we will get into the meat of BetVictor.
   The first place to begin is with the in-play betting section. This section of the bookmaker has benefited from the recent revamp and now feels much more connected to
        the rest of the site.
    The best betting tactics for winning every time are matched betting and arbitrage betting. They both cover every market outcome with a profit guarantee. Other strategies, like as value betting, can yield higher long-term returns. They are both covering every market outcome with a guaranteed profit. Other tactics,
        such as value betting, can provide greater long-term rewards.</string>
    <string name="title6_con">Football showcases the entire skill set, and you may select from nearly all of the games available in the football betting department.
        The all-new match centre at the top of the page is fantastic, and the graphics that go with it are second to none. We had want it to be a bit more realistic at times,
        since it does seem to go dead for a while, however this rarely happens if we were being honest.
    BetVictor allows new users to take advantage of its sign-up offer in a variety of ways, but the bonus monies must be spent in accordance with the company terms and conditions.
BetVictor is well-known for its new customer offer, but the online bookmaker also offers a variety of promotions to both new and current customers.</string>
    <string name="title7_con">For us, customer service is among the best in the industry.
        It is worth noting that there are numerous ways to reach them. On-site live chat is accessible, as well as email and phone support.
        BetVictor has a strong presence on Facebook and Twitter, indicating that social media is a possibility.
        Customer care is the assistance you give to your customers both before and after they buy and use your goods or services,
        helping them to have  a simple and pleasurable experience with you.
    </string>
    <string name="title8_con">Victor takes responsible gaming extremely seriously. They were among the first to sign up for the Gamstop initiative, which asks users to prove their identity before depositing and betting on the site. They also contain a variety of features, such as betting restrictions, limited time on site, self-exclusion, and a gambling overview to show how much money players are spending. They also collaborate with a number of organizations that assist those in need, such as Gamcare, Gamblers Anonymous, Gambling Therapy Apps, and Money Advice Service.</string>
    <string name="g1">What is the Victor welcome bonus?</string>
    <string name="g1c">The Victor sign-up offer is simple to redeem, and we will go over how the promotion works, how to redeem the sign-up offer, and how the Victor free bet works.</string>
    <string name="g2">How to Make Use of Victor Free Bets</string>
    <string name="g2c1">Victor allows new users to take advantage of its sign-up offer in a variety of ways, but the bonus monies must be spent in accordance with the company terms and conditions.</string>
    <string name="g2c2">You can spend your free bets on any single sports bet as long as the odds are 2.0 or higher. There are no wagering requirements, but your Victor free bets must be used within seven days after being approved.</string>
    <string name="g2c3">Football, horse racing, boxing, tennis, cricket, and rugby union are among the many sports available for wagering at Victor. To utilize your BetVictor free bets, you must first click Use Bonus Funds on your betting slip.</string>
    <string name="g3">How to Get Your BetVictor Free Bets Back</string>
    <string name="g3c">You cannot withdraw the Victor sign-up bonus immediately after earning it. When you use the free bets, any winning bets are paid out in cash and are available for withdrawal as the bet is completed. Any gains will not include your stake.</string>
    <string name="g4">All Victor promos and offers</string>
    <string name="g4c1">Regardless of whether they register other accounts with Victor, Parimatch, or any other brand that we operate, each customer is only eligible for one welcome offer throughout our sports and casino offers.</string>
    <string name="g4c2">Customers can withdraw their real cash balance at any time without impacting their eligibility, award, prize, or wagering for this campaign.</string>
    <string name="g4c3">If a customers account is blocked from placing sports bets, they can still satisfy any wagering requirements or utilise any outstanding bonus monies provided as part of this campaign by contacting customer support.</string>
    <string name="g4c4">If we suspect a customer has abused or is attempting to exploit this offer, we retain the right to revoke "Bonus Funds." Low-risk betting, such as betting on red/black, evens/odds, 1-18/19-36, or covering more than 20 numbers on a single spin (including straight up, splits, streets, corners, baskets, six-lines, dozens, columns, red/black, evens/odds, 1-18/19-36, and section/neighbor bets), will result in the bonus and any winnings being forfeited.</string>
    <string name="g4c5">The Promoter reserves the right to declare the promotion null and void, suspend, cancel, or amend it as a result of an exceptional event or circumstances beyond the Promoter reasonable control, such as the cancellation of a sports event that was a prerequisite for participation or a prize condition. If participation has already occurred, the Promoter may swap the incentive with something of equal or better value. For example, if the event on which the free bet was supposed to be used is canceled, the free bet will be valid on any sports event.</string>
    <string name="tip1">Boxing odds are available before of the matches at Victor Sports Odds. Follow the prices for notable fighters like Tyson Fury and Anthony Joshua,
        as well as any major televised fight, to see who has the highest chance of winning.Most fights will have basic betting markets like Winner, Method of Victory, and Round Betting. Obviously, the larger the battle, the more markets will be available.
        A match like the last heavyweight clash between Tyson Fury and Deontay Wilder could have had dozens of markets.</string>
    <string name="tip2">Football tips, odds comparison, match previews, data, and the latest market changes on all things football are all available at Victor Sports Odds.
        We strive to comb through football betting odds in order to provide you, the user, with a unique experience that highlights the finest value plays.
        Choosing the best of today football bets and odds for rapid access to place your bet, check the data, or read our match previews.
    This page has all of the finest odds for the Premier League, Champions and Europa Leagues, EFL, FA Cup, and League Cup, which are updated daily to bring
        you the most competitive rates available from a variety of bookies.</string>
    <string name="tip3">Victor Sports Odds offers UFC odds on the major fights before of the fights. Follow the prices for big fighters like Khabib Nurmagomedov and Conor McGregor, as well as any major televised fight, to see who has the highest probability of winning.
The Ultimate Fighting Championship (UFC) is a mixed martial arts promotional organization based in Las Vegas, Nevada. It is by far the largest MMA organization in the world, with the majority of the sports top competitors signed solely to their roster. Dana White, the UFC current President,
    has been in control since 2001 and has transformed the organization into a multibillion-dollar enterprise.</string>
    <string name="tip4">The current snooker odds for both outrights and match betting for the largest televised tournaments are available at Victor Sports Odd.
        We emphasize the players chances using our unique likelihood percentage.
Snooker betting is most commonly done online via bookmaker websites/apps, but if you prefer a more conventional method,
        you may also place a snooker bet in-store at your local betting shop. Snooker betting is quite popular,
        especially with the development of in-play betting. With markets like game betting and highest break, as well as the structure of the sport,
        it is truly set up to be a terrific sport to bet on.</string>
    <string name="tip5">Victor Sports Odds compares the odds for every horse racing in the United Kingdom and Ireland.
        We provide you the percentage probability each horse has of winning the race using our proprietary Probability Percentage factor.
Best Odds Guaranteed means that if you support a horse at a given price with a bookmaker,
        if the odds for that horse rise after you place your bet and it wins, the bookmaker will
        pay you out at the highest priced odds. For example, if a punter backs a horse to win a race at odds of 4/1,
        but the price climbs to 9/2 when the race begins and the bet wins,
        the bookmaker will pay out at 9/2 odds if they provide Best Odds Guaranteed.</string>
</resources>