<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentWay"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/tabbar2"
                android:backgroundTint="#CCFF90"
                android:gravity="center"
                android:text="@string/g1"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv1"
                android:layout_marginHorizontal="35dp"
                android:layout_marginTop="10dp"
                android:text="@string/g1c"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="italic|bold"
                app:drawableStartCompat="@drawable/circle" />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@+id/tv2"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/tabbar2"
                android:gravity="center"
                android:backgroundTint="#CCFF90"
                android:text="@string/g2"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv3"
                android:layout_marginHorizontal="35dp"
                android:layout_marginTop="10dp"
                android:text="@string/g2c1"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="italic|bold"
                app:drawableStartCompat="@drawable/circle" />

            <TextView
                android:id="@+id/tv5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv4"
                android:layout_marginHorizontal="35dp"
                android:layout_marginTop="10dp"
                android:text="@string/g2c2"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="italic|bold"
                app:drawableStartCompat="@drawable/circle" />

            <TextView
                android:id="@+id/tv6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv5"
                android:textSize="15dp"
                android:textStyle="italic|bold"
                android:layout_marginHorizontal="35dp"
                android:layout_marginTop="10dp"
                android:text="@string/g2c3"
                android:textColor="@color/white"
                app:drawableStartCompat="@drawable/circle" />

            <TextView
                android:id="@+id/tv7"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@+id/tv6"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/tabbar2"
                android:gravity="center"
                android:text="@string/g3"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:backgroundTint="#CCFF90"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv7"
                android:textSize="15dp"
                android:textStyle="italic|bold"
                android:layout_marginHorizontal="35dp"
                android:layout_marginTop="10dp"
                android:text="@string/g3c"
                android:textColor="@color/white"
                app:drawableStartCompat="@drawable/circle" />

            <TextView
                android:id="@+id/tv9"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@+id/tv8"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/tabbar2"
                android:gravity="center"
                android:text="@string/g4"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:backgroundTint="#CCFF90"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv9"
                android:textSize="15dp"
                android:textStyle="italic|bold"
                android:layout_marginHorizontal="35dp"
                android:layout_marginTop="10dp"
                android:text="@string/g4c1"
                android:textColor="@color/white"
                app:drawableStartCompat="@drawable/circle" />

            <TextView
                android:id="@+id/tv11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv10"
                android:textSize="15dp"
                android:textStyle="italic|bold"
                android:layout_marginHorizontal="35dp"
                android:layout_marginTop="10dp"
                android:text="@string/g4c2"
                android:textColor="@color/white"
                app:drawableStartCompat="@drawable/circle" />

            <TextView
                android:id="@+id/tv12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv11"
                android:textSize="15dp"
                android:textStyle="italic|bold"
                android:layout_marginHorizontal="35dp"
                android:layout_marginTop="10dp"
                android:text="@string/g4c3"
                android:textColor="@color/white"
                app:drawableStartCompat="@drawable/circle" />

            <TextView
                android:id="@+id/tv13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv12"
                android:textSize="15dp"
                android:textStyle="italic|bold"
                android:layout_marginHorizontal="35dp"
                android:layout_marginTop="10dp"
                android:text="@string/g4c4"
                android:textColor="@color/white"
                app:drawableStartCompat="@drawable/circle" />

            <TextView
                android:id="@+id/tv14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv13"
                android:layout_marginHorizontal="35dp"
                android:layout_marginTop="10dp"
                android:text="@string/g4c5"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="italic|bold"
                android:layout_marginBottom="15dp"
                app:drawableStartCompat="@drawable/circle" />

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>